2011-11-29 Roman
- FIX:UI.Vision: Previous value request is added for changes record on group values write into the inspector of attributes.


2011-11-28 Roman
- !!:DOC: All generic documents is updated for all languages: openscada.pdf, build.pdf, properties.pdf, "OpenSCADA API", "About OpenSCADA",
    "Lib TechApp", "Quick Start", "WLib Main", "WLib Mnemo elements"
- UI:Vision: Disable white background draw on widget's icons prepare.


2011-11-26 Roman
- FIX:SYS: Error word "Autor" is fixed to "Author" everywhere.
- !!:SYS: Core translation to German, Russian and Ukrainian is updated.
- !!:UI.QTCfg: Documents and full translations is updated and released version 2.1.0.
- !!:UI.QTStarter: Documents and full translations is updated and released version 1.6.2.
- !!:UI.VCAEngine: Documents and full translations is updated and released version 1.2.0.
- !!:UI.Vision: Documents and full translations is updated and released version 1.2.0.
- FIX:UI.Vision: UnDo and ReDo actions is placed to all need context menus.
    UnDo and ReDo acitions is fixed from activation lost on context menu calls.
    Align to Justify is added for primitive "Text".
- !!:UI.WebCfg: Documents and full translations is updated and released version 1.5.6.
- !!:UI.WebCfgD: Documents and full translations is updated and released version 0.8.0.
- !!:UI.WebUser: Documents and full translations is updated and released version 0.6.2.
- !!:UI.WebVision: Documents and full translations is updated and released version 1.0.0.


2011-11-23 Roman
- !!:SYS: Core language English and core translation to Russian and Ukrainian is updated.
- !!:Archive.DBArch: Documents and full translations is updated and released version 0.9.5.
- !!:Archive.FSArch: Documents and full translations is updated and released version 1.5.0.
- !!:DB.FireBird: Documents and full translations is updated and released version 0.9.7.
- !!:DB.MySQL: Documents and full translations is updated and released version 1.7.1.