@@ -275,6 +275,7 @@ class PageWdg : public Widget, public TConfig
     protected:
 	//Methods
 	void postEnable( int flag );
+	void preDisable( int flag );
 	void postDisable( int flag );
 
 	//> Storing
